//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  player Player
}

Table Player {
  id Int [pk, increment]
  name String [not null]
  user User [not null]
  userId Int [unique, not null]
  roles Role [not null]
  status Status [not null]
  statusId Int [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  warComposition WarComposition
  warCompositionId Int
  warStat WarStat [not null]
}

Table PlayerType {
  id Int [pk, increment]
  name String [not null]
  roleType RoleType [not null]
  level Level [not null, default: 'rookie']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  warComposition WarComposition [not null]
}

Table Role {
  id Int [pk, increment]
  name String [not null]
  roleType RoleType [not null]
  rune Rune [not null]
  weapon Weapon [not null]
  weightLimit WeightLimit [not null]
  player Player
  playerId Int
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table Status {
  id Int [pk, increment]
  ticket Boolean [not null, default: false]
  discord Boolean [not null, default: false]
  gear_check Boolean [not null, default: false]
  pov Boolean [not null, default: false]
  status_ticket String [default: '']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  player Player [not null]
}

Table War {
  id Int [pk, increment]
  name String [not null]
  date DateTime [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  composition WarComposition [not null]
  warStat WarStat [not null]
}

Table WarComposition {
  id Int [pk, increment]
  name String [not null]
  position WarPosition [not null]
  players Player [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  playerType PlayerType [not null]
  war War [not null]
}

Table WarStat {
  id Int [pk, increment]
  assist Int
  death Int
  dmg Int
  healing Int
  kill Int
  player Player [not null]
  playerId Int [not null]
  war War [not null]
  warId Int [not null]
}

Enum WarPosition {
  top_left
  top_right
  bottom_left
  bottom_right
  point
  flank
  flex
}

Enum Faction {
  Marauders
  Syndicate
  Covenant
}

Enum Weapon {
  Bow
  FireStaff
  GreatAxe
  GreatSword
  Blunderbuss
  Hatchet
  IceGauntlet
  LifeStaff
  Musket
  Rapier
  Spear
  Swords
  WarHammer
  VoidGauntlet
}

Enum RoleType {
  Bruiser
  Disrupter
  Heal
  Mage
  Ranged
  Support
  Tank
  Melee
  zzz_lvling
}

Enum Rune {
  Detonate
  Stoneform
  FireStorm
  GraspingVines
  BileBomb
  CanonBlast
  DarkAscent
  PrimalFury
  TheDevourer
}

Enum WeightLimit {
  Light
  Medium
  Heavy
}

Enum Level {
  rookie
  intermediate
  experienced
  veteran
}

Ref: Player.userId - User.id

Ref: Player.statusId > Status.id

Ref: Player.warCompositionId > WarComposition.id

Ref: Role.playerId > Player.id

Ref: WarStat.playerId > Player.id

Ref: WarStat.warId > War.id